--- a/examples/typescript/package.json
+++ b/examples/typescript/package.json
@@ -20,5 +20,8 @@
     "parcel-resolver-ignore": "^2.1.5",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "xterm-addon-fit": "^0.8.0"
   }
 }
